src/objects/FCUJob__c.object
<CustomObject>
    <fields>
        <fullName>Reason_reported__c</fullName>
        <label>Reason reported</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>419 Scam</fullName>
                </value>
                <value>
                    <fullName>False instruments paid in</fullName>
                </value>
                <value>
                    <fullName>Account Conduct</fullName>
                </value>
                <value>
                    <fullName>AccountTakeOver</fullName>
                </value>
                <value>
                    <fullName>Activity Review</fullName>
                </value>
                <value>
                    <fullName>Alias With Adverse</fullName>
                </value>
                <value>
                    <fullName>Altered cheque</fullName>
                </value>
                <value>
                    <fullName>Amount Out of Profile</fullName>
                </value>
                <value>
                    <fullName>Application Documentation</fullName>
                </value>
                <value>
                    <fullName>Application Inconsistencies</fullName>
                </value>
                <value>
                    <fullName>Bogus Company</fullName>
                </value>
                <value>
                    <fullName>Card Misuse</fullName>
                </value>
                <value>
                    <fullName>Card Not Present</fullName>
                </value>
                <value>
                    <fullName>Category 1 match</fullName>
                </value>
                <value>
                    <fullName>Category 6 Match</fullName>
                </value>
                <value>
                    <fullName>Cheque Fraud Conversion</fullName>
                </value>
                <value>
                    <fullName>Compromised ATMs</fullName>
                </value>
                <value>
                    <fullName>Compromised Card</fullName>
                </value>
                <value>
                    <fullName>Counterfeit Cheque</fullName>
                </value>
                <value>
                    <fullName>Crossfiring</fullName>
                </value>
                <value>
                    <fullName>Customer Behaviour</fullName>
                </value>
                <value>
                    <fullName>Customer Profile</fullName>
                </value>
                <value>
                    <fullName>Direct Debit Fraud</fullName>
                </value>
                <value>
                    <fullName>Dishonestly retaining a wrongful credit</fullName>
                </value>
                <value>
                    <fullName>Docs - Altered</fullName>
                </value>
                <value>
                    <fullName>Docs - False</fullName>
                </value>
                <value>
                    <fullName>Docs - Stolen</fullName>
                </value>
                <value>
                    <fullName>Email Scam</fullName>
                </value>
                <value>
                    <fullName>Emp - False employment</fullName>
                </value>
                <value>
                    <fullName>Emp - False employment status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recovery_amount__c</fullName>
        <label>Recovery amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refer_reason__c</fullName>
        <label>Refer reason</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_day_1__c</fullName>
        <label>Refund day 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Waiting to speak to customer</fullName>
                </value>
                <value>
                    <fullName>Believe customer to be involved</fullName>
                </value>
                <value>
                    <fullName>Transaction not posted</fullName>
                </value>
                <value>
                    <fullName>Waiting for further information</fullName>
                </value>
                <value>
                    <fullName>Speaking to Merchant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Removal__c</fullName>
        <label>Removal</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reported_Reason__c</fullName>
        <label>Reported Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Terrorism</fullName>
                </value>
                <value>
                    <fullName>PoCA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reported_to_NCA__c</fullName>
        <label>Reported to NCA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_type__c</fullName>
        <label>Request type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Monitoring Order</fullName>
                </value>
                <value>
                    <fullName>Application for Production Order</fullName>
                </value>
                <value>
                    <fullName>CCTV Request</fullName>
                </value>
                <value>
                    <fullName>Charity Commission</fullName>
                </value>
                <value>
                    <fullName>Child Maintenance</fullName>
                </value>
                <value>
                    <fullName>CIFAS ALERT</fullName>
                </value>
                <value>
                    <fullName>Confiscation Order</fullName>
                </value>
                <value>
                    <fullName>Counter Terrorism Act 2000</fullName>
                </value>
                <value>
                    <fullName>Court Attendance</fullName>
                </value>
                <value>
                    <fullName>Court Order</fullName>
                </value>
                <value>
                    <fullName>Customer Authority</fullName>
                </value>
                <value>
                    <fullName>Customer Enquiry</fullName>
                </value>
                <value>
                    <fullName>Customer Information Order</fullName>
                </value>
                <value>
                    <fullName>Data Disclosure Request(CSA)</fullName>
                </value>
                <value>
                    <fullName>Deduction Order</fullName>
                </value>
                <value>
                    <fullName>Discharge Order</fullName>
                </value>
                <value>
                    <fullName>Disclosure Order</fullName>
                </value>
                <value>
                    <fullName>Docs - False</fullName>
                </value>
                <value>
                    <fullName>Evidential Package</fullName>
                </value>
                <value>
                    <fullName>Financial Information Order</fullName>
                </value>
                <value>
                    <fullName>Financial Reporting Orders</fullName>
                </value>
                <value>
                    <fullName>Fraudulent Transaction</fullName>
                </value>
                <value>
                    <fullName>Freezing Order</fullName>
                </value>
                <value>
                    <fullName>Further Information</fullName>
                </value>
                <value>
                    <fullName>High Cash Activity</fullName>
                </value>
                <value>
                    <fullName>Indemnity</fullName>
                </value>
                <value>
                    <fullName>Interim Third Party Debt Order</fullName>
                </value>
                <value>
                    <fullName>Lump sum deduction order</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Other Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_ID__c</fullName>
        <formula>IF(RecordType.Name = &quot;Application&quot;,  Application_SFDC_id__c ,  Customer_Account__r.Primary_SFDC_Account__r.SFDC_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction_name__c</fullName>
        <label>Sanction name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Savings_amount__c</fullName>
        <label>Savings amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Suspected_Perpetrators__c</fullName>
        <label>Suspected Perpetrators</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Friend/Family member</fullName>
                </value>
                <value>
                    <fullName>Unknown third party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_open__c</fullName>
        <formula>Date_time_completed__c - Date_time_recieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_amount__c</fullName>
        <label>Total amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unblocked_internet_telephone_usage__c</fullName>
        <label>Unblocked internet/telephone usage?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <label>Update</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Witness_statement_contact__c</fullName>
        <label>Witness statement contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Witness_statement_requested__c</fullName>
        <label>Witness statement requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SFDC_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>Payment_amount__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Applications</fullName>
        <columns>NAME</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SFDC_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CIFAS_match__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FCUJob__c.Application</value>
        </filters>
        <label>Applications</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned</fullName>
        <columns>NAME</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SFDC_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <label>Assigned</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CIFAS</fullName>
        <columns>NAME</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SFDC_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FCUJob__c.CIFAS</value>
        </filters>
        <label>CIFAS</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed</fullName>
        <columns>NAME</columns>
        <columns>Date_time_completed__c</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SFDC_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Disputes</fullName>
        <columns>NAME</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SFDC_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FCUJob__c.Fraud_Investigation</value>
        </filters>
        <label>Disputes</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Emma_s_list</fullName>
        <columns>NAME</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Payment_type__c</columns>
        <columns>SFDC_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Prospect_Customer1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Emma</value>
        </filters>
        <label>Emma&apos;s list</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_progress</fullName>
        <columns>NAME</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SFDC_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Status__c</field>
            <operation>equals</operation>
            <value>In progress</value>
        </filters>
        <label>In progress</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_started</fullName>
        <columns>NAME</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SFDC_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Status__c</field>
            <operation>equals</operation>
            <value>Not started</value>
        </filters>
        <label>Not started</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>On_hold</fullName>
        <columns>NAME</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SFDC_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Status__c</field>
            <operation>equals</operation>
            <value>On hold</value>
        </filters>
        <label>On hold</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_jobs</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Diarised_closure_date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>SFDC_ID__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Date_time_completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Status__c</field>
            <operation>equals</operation>
            <value>Not started,Assigned,In progress,On hold</value>
        </filters>
        <label>Open jobs</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Payments_screening</fullName>
        <columns>NAME</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Payment_amount__c</columns>
        <columns>Payment_type__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SFDC_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FCUJob__c.Payments_screening</value>
        </filters>
        <label>Payments screening</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Police_requests</fullName>
        <columns>NAME</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SFDC_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FCUJob__c.Police_Request</value>
        </filters>
        <label>Payment Type</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Quz_s_list</fullName>
        <columns>NAME</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SFDC_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Quzam</value>
        </filters>
        <label>Quz&apos;s list</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SAR</fullName>
        <columns>NAME</columns>
        <columns>Date_time_recieved__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SFDC_ID__c</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Reported_to_NCA__c</columns>
        <columns>Consent_required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FCUJob__c.SAR</value>
        </filters>
        <label>SAR</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>J{0000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>CIFAS</fullName>
        <active>false</active>
        <label>CIFAS</label>
    </recordTypes>
    <recordTypes>
        <fullName>FCU_Notes</fullName>
        <active>true</active>
        <description>FCU notes not attached to a specific Job</description>
        <label>FCU Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fraud_Investigation</fullName>
        <active>true</active>
        <label>Fraud Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payments_screening</fullName>
        <active>true</active>
        <label>Payments screening</label>
    </recordTypes>
    <recordTypes>
        <fullName>Police_Request</fullName>
        <active>true</active>
        <description>For use with all Police enquiries</description>
        <label>Police Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAR</fullName>
        <active>true</active>
        <label>SAR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sanctions</fullName>
        <active>true</active>
        <label>Sanctions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Loaded_to_CIFAS</fullName>
        <active>false</active>
        <errorConditionFormula>IF(TEXT(Job_Status__c)=&apos;Completed&apos;,  (TEXT(Loaded_to_CIFAS__c)) = &apos;&apos; ,  (TEXT(Loaded_to_CIFAS__c)  &lt;&gt; &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Loaded_to_CIFAS__c</errorDisplayField>
        <errorMessage>Please complete the loaded to CIFAS field</errorMessage>
    </validationRules>
</CustomObject>